update template to work with new WebGPU LittleKt 0.10.0 update